--- a/Practica14.html
+++ b/Practica14.html
@@ -35,7 +35,7 @@
     <h3>Contribución Principal</h3>
     <p>Escribió el primer algoritmo destinado a ser procesado por una máquina, sentando las bases de la programación.</p>
     <blockquote>"La máquina analítica teje patrones algebraicos igual como el telar de Jacquard teje flores y hojas."</blockquote>
-    <img src="https://th.bing.com/th/id/R.74de69b8df18e2759eb7f3f95bd53ae3?rik=rSqk2L1yVoAGTw&riu=http%3a%2f%2fcdn.images.express.co.uk%2fimg%2fdynamic%2f39%2f590x%2fada-436432.jpg&ehk=BO%2fRWTWkwKgbgWi%2bBrhC3gm7dHTOhcP3%2bL%2f8sCIkYRg%3d&risl=&pid=ImgRaw&r=0" alt=""> <br>
+    <img src="https://th.bing.com/th/id/R.74de69b8df18e2759eb7f3f95bd53ae3?rik=rSqk2L1yVoAGTw&riu=http%3a%2f%2fcdn.images.express.co.uk%2fimg%2fdynamic%2f39%2f590x%2fada-436432.jpg&ehk=BO%2fRWTWkwKgbgWi%2bBrhC3gm7dHTOhcP3%2bL%2f8sCIkYRg%3d&risl=&pid=ImgRaw&r=0" alt="Ada Lovelance"> <br>
     <a href="#Inicio">Inicio</a>
     </section>
     <section id="Alan">
@@ -81,4 +81,5 @@
         
     </footer>
 </body>
+
 </html>
