--- a/Ejercicio8C2.html
+++ b/Ejercicio8C2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="Ejercicio8.css">
+    <link rel="stylesheet" href="Ejercicio8C2.css">
 </head>
 <body>
     <header id="header">
@@ -34,4 +34,5 @@
         <p>© 2023 My Portfolio</p>
     </footer>
 </body>
+
 </html>
