--- a/Ejercicio11C2.html
+++ b/Ejercicio11C2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Leonardo Acosta</title>
-  <link rel="stylesheet" href="practica 11.css" title="frutas">
+  <link rel="stylesheet" href="frutas.css" title="frutas">
 </head>
 
 <body>
