--- a/Ejercicio10C2.html
+++ b/Ejercicio10C2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Leonardo Acosta</title> 
+  <title>Oscar Emilio</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="practica10.css" title="Color">
 </head>
@@ -24,4 +24,5 @@
 
   
 </body>
+
 </html>
