--- a/Ejercicio10C2.html
+++ b/Ejercicio10C2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Oscar Emilio</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="practica10.css" title="Color">
+  <link rel="stylesheet" href="Murphy.css" title="Color">
 </head>
 
 <body>
@@ -26,3 +26,4 @@
 </body>
 
 </html>
+
