--- a/Menu2.html
+++ b/Menu2.html
@@ -58,7 +58,7 @@
     </div>
     <div>
         <h1>Actividad 14</h1>
-        <a href="Ejercicio14C2.html" target="_blank"><img src="Programador.png" alt=""></a>
+        <a href="revistas.html" target="_blank"><img src="Programador.png" alt=""></a>
     </div>
     <div>
         <h1>Actividad 15</h1>
@@ -70,4 +70,5 @@
     </div>
     
 </body>
+
 </html>
