--- a/Ejercicio10C2.html
+++ b/Ejercicio10C2.html
@@ -10,20 +10,21 @@
 <body>
   <h1>Leyes de Murphy</h1>
 
-  <p id="m1">Cualquier cosa que pueda ir mal, ... irá mal.</p>
+  <p class="m1">Cualquier cosa que pueda ir mal, ... irá mal.</p>
 
-  <p id="m2">Todo aquello que comienza bien, acaba mal. Todo aquello que comienza mal, acaba peor.</p>
+  <p class="m2">Todo aquello que comienza bien, acaba mal. Todo aquello que comienza mal, acaba peor.</p>
 
-  <p id="m3">Si sabes que una cosa puede ir mal y tomas todas las precauciones, irá mal otra cosa.</p>
+  <p class="m3">Si sabes que una cosa puede ir mal y tomas todas las precauciones, irá mal otra cosa.</p>
 
-  <p id="m4">No hay nada que vaya tan mal que no pueda ir peor.</p>
+  <p class="m4">No hay nada que vaya tan mal que no pueda ir peor.</p>
 
-  <p id="m5">Todo va mal a la vez.</p>
+  <p class="m5">Todo va mal a la vez.</p>
 
-  <p id="m6">Murphy era un optimista</p>
+  <p class="m6">Murphy era un optimista</p>
 
   
 </body>
 
 </html>
+
 
