--- a/Menu2.html
+++ b/Menu2.html
@@ -42,7 +42,7 @@
     </div>
     <div class="what">
         <h1>Actividad 9</h1>
-        <a href="Ejercicio9.html" target="_blank"><img src="Queen.png" alt="" width="250"></a>
+        <a href="Ejercicio9corregido.html" target="_blank"><img src="Queen.png" alt="" width="250"></a>
     </div>
     <div>
         <h1>Actividad 10</h1>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
