--- a/Portafolio3.html
+++ b/Portafolio3.html
@@ -42,19 +42,16 @@
         <div class="container">
           <div class="row">
 
-            <!-- === 20 TARJETAS GENERADAS === -->
-            <!-- Las imágenes son aleatorias y puedes cambiarlas -->
-
             <!-- Actividad 1 -->
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://picsum.photos/400/250?random=1" alt="Actividad 1">
+                <img class="card-img-top" src="https://imgs.search.brave.com/-4iNfhJQGpwcWH4WS2hZmE9F7_vc8qXaDowXI_bBmHc/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jb250/ZW50LnBleGVscy5j/b20vaW1hZ2VzL2Nh/bnZhL2FpLWdlbmVy/YXRlZC1hZC9vZmYt/dGhlbWUvaGlnaF9h/bHRpdHVkZV9hZXJp/YWxfdmlld19hYm92/ZV9jb3R0b25fc29m/dF9jbG91ZF90b3Bz/X2dsb3dpbmdfaW5f/Z29sZGVuX2hvdXJf/bGlnaHQtZnVsbC5q/cGc" alt="Actividad 1">
                 <div class="card-body">
                   <h5 class="card-title">Actividad 1</h5>
-                  <p class="card-text">Descripción breve de la actividad 1.</p>
+                  <p class="card-text"></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-sm btn-outline-primary">Ver</a>
+                      <a href="ejercicio1.html" class="btn btn-sm btn-outline-primary">Ver</a>
                     </div>
                     <small class="text-muted">1</small>
                   </div>
@@ -63,7 +60,6 @@
             </div>
 
             <!-- Actividades 2 a 20 -->
-            <!-- Puedes editar todas estas -->
             
             <div class="col-md-4"><div class="card mb-4 box-shadow"><img class="card-img-top" src="https://picsum.photos/400/250?random=2"><div class="card-body"><h5 class="card-title">Actividad 2</h5><p>Descripción breve de la actividad 2.</p><div class="d-flex justify-content-between align-items-center"><div class="btn-group"><a class="btn btn-sm btn-outline-primary">Ver</a></div><small class="text-muted">2</small></div></div></div></div>
 
