Update links in Portafolio3.html

--- a/Portafolio3.html
+++ b/Portafolio3.html
@@ -27,8 +27,8 @@
         <h1 class="text-center">Portafolio 3</h1>
         <div>
          
-          <a href="portafolio1.html" class="btn btn-primary">Portafolio 1</a>
-          <a href="portafolio2.html" class="btn btn-secondary">Portafolio 2</a>
+          <a href="Menuexamen.html" class="btn btn-primary">Portafolio 1</a>
+          <a href="Menu2.html" class="btn btn-secondary">Portafolio 2</a>
         </div>
       </div>
 
@@ -112,3 +112,4 @@
 
   </body>
 </html>
+
