Fix HTML encoding issues in Portafolio3.html

--- a/Portafolio3.html
+++ b/Portafolio3.html
@@ -51,7 +51,7 @@
                   <p class="card-text"></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="ejercicio1.html" class="btn btn-sm btn-outline-primary">Ver</a>
+                      <a href="ejercicio1C3.html" class="btn btn-sm btn-outline-primary">Ver</a>
                     </div>
                     <small class="text-muted">1</small>
                   </div>
@@ -112,4 +112,5 @@
 
   </body>
 </html>
+
 
